--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,7 +14,7 @@
             <div class="menu-wrap flex">
                 <ul class="flex menu-ul">
                     <li>
-                        <a href="/">About</a>
+                        <a href="/about">About</a>
                     </li>
                     <li class="dropdown relative">
                         <a href="/">Service</a>
