Service page create and desktop design

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,7 +17,7 @@
                         <a href="/about">About</a>
                     </li>
                     <li class="dropdown relative">
-                        <a href="/">Service</a>
+                        <a href="/service">Service</a>
                         <div class="dropdown-wrap">
                             <div class="megamenu-container flex">
                                 <div class="mega-side-left">
