--- a/src/styles.css
+++ b/src/styles.css
@@ -174,10 +174,39 @@ body {
 .wrap {
     flex-wrap: wrap;
 }
+.ff-lato {
+    font-family: var(--main-heading-font);
+}
+.ff-rubik {
+    font-family: var(--second-heading);
+}
+.w-100 {
+    width: 100%;
+}
+.margin-auto {
+    margin: 0 auto;
+}
 .cdk-btn-green {
     width: 160px;
     height: 50px;
     background-color: #37C8AC;
+    color: #000;
+    text-decoration: none;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 19px;
+    text-transform: capitalize;
+    font-family: var(--second-heading);
+}
+.cdk-btn-white {
+    width: 160px;
+    height: 50px;
+    background-color: #fff;
     color: #000;
     text-decoration: none;
     display: inline-flex;
@@ -214,7 +243,8 @@ body {
 }
 .service_section .service_all_wrap .service-head.flex,
 .our_work_section .our_work_all_wrap .service-head.flex,
-.blogs-section .our_work_all_wrap .service-head.flex {
+.blogs-section .our_work_all_wrap .service-head.flex,
+.our-approach-section .service-head.flex {
     align-items: flex-end;
     column-gap: 30px;
 }
@@ -228,13 +258,15 @@ body {
 }
 .service_section .service_all_wrap .service-head .service-titel,
 .our_work_section .our_work_all_wrap .service-head .service-titel,
-.blogs-section .our_work_all_wrap .service-head .service-titel {
+.blogs-section .our_work_all_wrap .service-head .service-titel,
+.our-approach-section .service-head .service-titel {
     width: 100%;
     max-width: 519px;
 }
 .service_section .service_all_wrap .service-head .service-titel h3,
 .our_work_section .our_work_all_wrap .service-head .service-titel h3,
-.blogs-section .our_work_all_wrap .service-head .service-titel h3 {
+.blogs-section .our_work_all_wrap .service-head .service-titel h3,
+.our-approach-section .service-head .service-titel h3 {
     color: #37C8AE;
     font-family: var(--second-heading);
     font-size: 20px;
@@ -246,7 +278,8 @@ body {
 }
 .service_section .service_all_wrap .service-head .service-titel h2,
 .our_work_section .our_work_all_wrap .service-head .service-titel h2,
-.blogs-section .our_work_all_wrap .service-head .service-titel h2 {
+.blogs-section .our_work_all_wrap .service-head .service-titel h2,
+.our-approach-section .service-head .service-titel h2 {
     color: #FFF;
     font-family: var(--main-heading-font);
     font-size: 45px;
@@ -256,13 +289,15 @@ body {
 }
 .service_section .service_all_wrap .service-head .service-text,
 .our_work_section .our_work_all_wrap .service-head .service-text,
-.blogs-section .our_work_all_wrap .service-head .service-text {
+.blogs-section .our_work_all_wrap .service-head .service-text,
+.our-approach-section .service-head .service-text {
     width: 100%;
     max-width: 817px;
 }
 .service_section .service_all_wrap .service-head .service-text p,
 .our_work_section .our_work_all_wrap .service-head .service-text p,
-.blogs-section .our_work_all_wrap .service-head .service-text p {
+.blogs-section .our_work_all_wrap .service-head .service-text p,
+.our-approach-section .service-head .service-text p {
     color: #FFF;
     font-family: var(--second-heading);
     font-size: 18px;
@@ -483,6 +518,8 @@ body {
 }
 .main-title-section .main-title-wrap .main-heading {
     margin: 15px 0;
+    text-transform: capitalize;
+    text-shadow: 0px 4px 4px rgba(255, 255, 255, 0.25);
 }
 .main-title-section .main-title-wrap .primery-text {
     color: #FFF;
@@ -490,8 +527,153 @@ body {
     width: 100%;
     max-width: 1012px;
 }
+/* about cards */
+.about-banner-section .container .about_cards_wrap,
+.our-approach-section .container .about_cards_wrap {
+    width: 100%;
+    padding: 200px 0;
+    column-gap: 19px;
+}
+.about-banner-section .container .about_cards_wrap .about-cards_wrap,
+.our-approach-section .container .about_cards_wrap .about-cards_wrap {
+    width: 100%;
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+}
+.about-banner-section .container .about_cards_wrap .about-cards_wrap .card-wrapper .card-heading,
+.our-approach-section .container .about_cards_wrap .about-cards_wrap .card-wrapper .card-heading {
+    color: #FFF;
+    font-family: var(--second-heading);
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 27px;
+    margin-bottom: 38px;
+    text-transform: uppercase;
+}
+.about-banner-section .container .about_cards_wrap .about-cards_wrap .card-wrapper .card-text,
+.our-approach-section .container .about_cards_wrap .about-cards_wrap .card-wrapper .card-text {
+    font-family: var(--second-heading);
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 27px;
+}
+.about-banner-section .container .about_cards_wrap .about-cards_wrap .box,
+.our-approach-section .container .about_cards_wrap .about-cards_wrap .box {
+    width: 100%;
+    max-width: 447px;
+    height: 100%;
+    overflow: hidden;
+    border: 1px solid #37C8AE;
+    border-radius: 10px;
+}
+.about-banner-section .container .about_cards_wrap .about-cards_wrap .box .content,
+.our-approach-section .container .about_cards_wrap .about-cards_wrap .box .content {
+    padding: 50px 37px;
+    text-align:center;
+    
+}
+.about-banner-section .container .about_cards_wrap .about-cards_wrap .box:before,
+.our-approach-section .container .about_cards_wrap .about-cards_wrap .box:before {
+    content: '';
+    position:absolute;
+    top:0;
+    left:-100%;
+    width:100%;
+    height:100%;
+    background: #37c8ae1a;
+    transition:0.5s;
+    pointer-events: none;
+}
+  
+.about-banner-section .container .about_cards_wrap .about-cards_wrap .box:hover:before,
+.our-approach-section .container .about_cards_wrap .about-cards_wrap .box:hover:before {
+    left:-50%;
+    transform: skewX(-5deg);
+}
+.about-banner-section .container .about_cards_wrap .about-cards_wrap .box span:nth-child(1),
+.our-approach-section .container .about_cards_wrap .about-cards_wrap .box span:nth-child(1) {
+	position: absolute;
+	top: 1px;
+	right: 0;
+	width: 100%;
+	height: 3px;
+	background: linear-gradient(to right, #17161800, #37C8AE);
+	animation: animate1 2s linear infinite;
+}
 
+@keyframes animate1 {
+	0% {
+		transform: translateX(-100%);
+	}
+	100% {
+		transform: translateX(100%);
+	}
+}
 
+.about-banner-section .container .about_cards_wrap .about-cards_wrap .box span:nth-child(2),
+.our-approach-section .container .about_cards_wrap .about-cards_wrap .box span:nth-child(2) {
+	position: absolute;
+	top: 0;
+	right: 1px;
+	height: 100%;
+	width: 3px;
+	background: linear-gradient(to bottom, #17161800, #37C8AE);
+	animation: animate2 2s linear infinite;
+	animation-delay: 1s;
+}
+@keyframes animate2 {
+	0% {
+		transform: translateY(-100%);
+	}
+	100% {
+		transform: translateY(100%);
+	}
+}
+
+.about-banner-section .container .about_cards_wrap .about-cards_wrap .box span:nth-child(3),
+.our-approach-section .container .about_cards_wrap .about-cards_wrap .box span:nth-child(3) {
+	position: absolute;
+	bottom: 1px;
+	right: 0;
+	width: 100%;
+	height: 3px;
+	background: linear-gradient(to left, #17161800, #37C8AE);
+	animation: animate3 2s linear infinite;
+}
+
+@keyframes animate3 {
+	0% {
+		transform: translateX(100%);
+	}
+	100% {
+		transform: translateX(-100%);
+	}
+}
+
+.about-banner-section .container .about_cards_wrap .about-cards_wrap .box span:nth-child(4),
+.our-approach-section .container .about_cards_wrap .about-cards_wrap .box span:nth-child(4) {
+	position: absolute;
+	top: 0;
+	left: 1px;
+	height: 100%;
+	width: 3px;
+	background: linear-gradient(to top, #17161800, #37C8AE);
+	animation: animate4 2s linear infinite;
+	animation-delay: 1s;
+}
+
+@keyframes animate4 {
+	0% {
+		transform: translateY(100%);
+	}
+	100% {
+		transform: translateY(-100%);
+	}
+}
+/* about cards end */
 
 
 
@@ -619,11 +801,27 @@ body {
     .blogs-section {
         padding: 100px 0 150px;
     }
+    /* about cards */
+    .about-banner-section .container .about_cards_wrap .about-cards_wrap .box .content,
+    .our-approach-section .container .about_cards_wrap .about-cards_wrap .box .content {
+        padding: 30px 20px;
+    }
+    .about-banner-section .container .about_cards_wrap .about-cards_wrap .card-wrapper .card-heading,
+    .our-approach-section .container .about_cards_wrap .about-cards_wrap .card-wrapper .card-heading {
+        margin-bottom: 20px;
+    }
+    .about-banner-section .container .about_cards_wrap .about-cards_wrap .card-wrapper .card-text,
+    .our-approach-section .container .about_cards_wrap .about-cards_wrap .card-wrapper .card-text {
+        font-size: 16px;
+        line-height: 22px;
+    }
+    /* about cards end */
 }
 @media only screen and (min-width:768px) and (max-width:991px) {
     .service_section .service_all_wrap .service-head.flex,
     .our_work_section .our_work_all_wrap .service-head.flex,
-    .blogs-section .our_work_all_wrap .service-head.flex {
+    .blogs-section .our_work_all_wrap .service-head.flex,
+    .our-approach-section .service-head.flex {
         align-items: flex-start;
         column-gap: 20px;
     }
@@ -654,6 +852,21 @@ body {
         min-height: 400px;
         object-fit: cover;
     }
+    /* about cards */
+    .about-banner-section .container .about_cards_wrap,
+    .our-approach-section .container .about_cards_wrap {
+        padding: 100px 0;
+    }
+    .about-banner-section .container .about_cards_wrap .about-cards_wrap .box .content,
+    .our-approach-section .container .about_cards_wrap .about-cards_wrap .box .content {
+        padding: 20px 15px;
+    }
+    .about-banner-section .container .about_cards_wrap .about-cards_wrap .card-wrapper .card-text,
+    .our-approach-section .container .about_cards_wrap .about-cards_wrap .card-wrapper .card-text {
+        font-size: 14px;
+        line-height: 21px;
+    }
+    /* about cards end */
 }
 @media only screen and (max-width:767px) {
     .desktop{
@@ -682,24 +895,28 @@ body {
     }
     .service_section .service_all_wrap .service-head.flex,
     .our_work_section .our_work_all_wrap .service-head.flex,
-    .blogs-section .our_work_all_wrap .service-head.flex {
+    .blogs-section .our_work_all_wrap .service-head.flex,
+    .our-approach-section .service-head.flex {
         flex-wrap: wrap;
         row-gap: 12px;
     }
     .service_section .service_all_wrap .service-head .service-titel h3,
     .our_work_section .our_work_all_wrap .service-head .service-titel h3,
-    .blogs-section .our_work_all_wrap .service-head .service-titel h3 {
+    .blogs-section .our_work_all_wrap .service-head .service-titel h3,
+    .our-approach-section .service-head .service-titel h3 {
         font-size: 18px;
         margin-bottom: 10px;
     }
     .service_section .service_all_wrap .service-head .service-titel h2,
     .our_work_section .our_work_all_wrap .service-head .service-titel h2,
-    .blogs-section .our_work_all_wrap .service-head .service-titel h2 {
+    .blogs-section .our_work_all_wrap .service-head .service-titel h2,
+    .our-approach-section .service-head .service-titel h2 {
         font-size: 28px;
     }
     .service_section .service_all_wrap .service-head .service-text p,
     .our_work_section .our_work_all_wrap .service-head .service-text p,
-    .blogs-section .our_work_all_wrap .service-head .service-text p {
+    .blogs-section .our_work_all_wrap .service-head .service-text p,
+    .our-approach-section .service-head .service-text p {
         font-size: 16px;
         line-height: 25px;
     }
@@ -855,5 +1072,32 @@ body {
     }
     .image-slider-items .slick-slide img {
         border-radius: 10px;
+    }
+    /* about cards */
+    .about-banner-section .container .about_cards_wrap,
+    .our-approach-section .container .about_cards_wrap {
+        padding: 55px 0;
+        flex-wrap: wrap;
+        row-gap: 20px;
+    }
+    .about-banner-section .container .about_cards_wrap .about-cards_wrap .box .content,
+    .our-approach-section .container .about_cards_wrap .about-cards_wrap .box .content {
+        padding: 40px 20px;
+    }
+    .about-banner-section .container .about_cards_wrap .about-cards_wrap .card-wrapper .card-heading,
+    .our-approach-section .container .about_cards_wrap .about-cards_wrap .card-wrapper .card-heading {
+        font-size: 20px;
+        line-height: 22px;
+        margin-bottom: 24px;
+    }
+    .about-banner-section .container .about_cards_wrap .about-cards_wrap .card-wrapper .card-text,
+    .our-approach-section .container .about_cards_wrap .about-cards_wrap .card-wrapper .card-text {
+        font-size: 16px;
+        line-height: 25px;
+    }
+    .about-banner-section .container .about_cards_wrap .about-cards_wrap,
+    .our-approach-section .container .about_cards_wrap .about-cards_wrap {
+        max-width: 390px;
+        margin: 0 auto;
     }
 }
