--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -62,7 +62,7 @@
                         </div>
                     </li>
                     <li>
-                        <a href="/">Protfolio</a>
+                        <a href="/our-work">Protfolio</a>
                     </li>
                     <li>
                         <a href="/">blogs</a>
