--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -210,7 +210,7 @@
             </div>
             <div class="our_work_body_wrap">
                 <div class="our_work-images_wrap flex wrap">
-                    <div class="work-image_one">
+                    <div class="work-image_one work-image_all">
                         <div class="card-h-txt">
                             <img class="logo_card" src="../../assets/image/luxandnyx_logo-h.png" width="100%" alt="">
                             <div class="bottom_card">
@@ -218,13 +218,14 @@
                             <p class="card-txt">Shopify Plus Design & Build</p>
                             </div>
                         </div>
-                        <img src="../../assets/image/our_work_1.png" alt="">
+                        <img class="desktop" src="../../assets/image/portfolio/our_work_1.png" alt="">
+                        <img class="mobile" src="../../assets/image/portfolio/our_work_1-mobile.png" alt="">
                     </div>
                     <div class="our_card_bottom_text mobile">
                         <h4 class="card-heading">luxandnyx</h4>
                         <p class="card-txt">Shopify Plus Design & Build</p>
                     </div>
-                    <div class="work-image_two">
+                    <div class="work-image_two work-image_all">
                         <div class="card-h-txt">
                             <img class="logo_card" src="../../assets/image/luxandnyx_logo-h.png" width="100%" alt="">
                             <div class="bottom_card">
@@ -232,7 +233,8 @@
                             <p class="card-txt">Shopify Plus Design & Build</p>
                             </div>
                         </div>
-                        <img src="../../assets/image/our_work_2.png" alt="">
+                        <img class="desktop" src="../../assets/image/portfolio/our_work_2.png" alt="">
+                        <img class="mobile" src="../../assets/image/portfolio/our_work_2-mobile.png" alt="">
                     </div>
                     <div class="our_card_bottom_text mobile">
                         <h4 class="card-heading">luxandnyx</h4>
@@ -240,7 +242,7 @@
                     </div>
                 </div>
                 <div class="our_work-images_wrap flex wrap second">
-                    <div class="work-image_three">
+                    <div class="work-image_three work-image_all">
                         <div class="card-h-txt">
                             <img class="logo_card" src="../../assets/image/luxandnyx_logo-h.png" width="100%" alt="">
                             <div class="bottom_card">
@@ -248,13 +250,14 @@
                             <p class="card-txt">Shopify Plus Design & Build</p>
                             </div>
                         </div>
-                        <img src="../../assets/image/our_work_3.png" alt="">
+                        <img class="desktop" src="../../assets/image/portfolio/our_work_3.png" alt="">
+                        <img class="mobile" src="../../assets/image/portfolio/our_work_3-mobile.png" alt="">
                     </div>
                     <div class="our_card_bottom_text mobile">
                         <h4 class="card-heading">luxandnyx</h4>
                         <p class="card-txt">Shopify Plus Design & Build</p>
                     </div>
-                    <div class="work-image_four">
+                    <div class="work-image_four work-image_all">
                         <div class="card-h-txt">
                             <img class="logo_card" src="../../assets/image/luxandnyx_logo-h.png" width="100%" alt="">
                             <div class="bottom_card">
@@ -262,7 +265,8 @@
                             <p class="card-txt">Shopify Plus Design & Build</p>
                             </div>
                         </div>
-                        <img src="../../assets/image/our_work_4.png" alt="">
+                        <img class="desktop" src="../../assets/image/portfolio/our_work_4.png" alt="">
+                        <img class="mobile" src="../../assets/image/portfolio/our_work_4-mobile.png" alt="">
                     </div>
                     <div class="our_card_bottom_text mobile">
                         <h4 class="card-heading">luxandnyx</h4>
@@ -270,7 +274,7 @@
                     </div>
                 </div>
                 <div class="bnt-wrap">
-                    <a class="cdk-btn-green" href="/">View all services</a>
+                    <a class="cdk-btn-green" href="/">view all projects</a>
                 </div>
             </div>
         </div>
