--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -65,7 +65,7 @@
                         <a href="/our-work">Protfolio</a>
                     </li>
                     <li>
-                        <a href="/">blogs</a>
+                        <a href="/blog-list">blogs</a>
                     </li>
                 </ul>
                 <div class="bnt-wrap">
