--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -355,33 +355,33 @@
                 </div>
             </div>
             <div class="blog_cards_wrapper flex">
-                <div class="blog_card_wrap">
+                <a href="javascript:void(0)" class="blog_card_wrap">
                     <div class="blog-img">
-                        <img src="../../assets/image/blog-one.png" alt="blog">
+                        <img src="../../assets/image/blogs/blog-one.png" alt="blog">
                     </div>
                     <div class="blog-title-text">
                         <h3>January 20, 2021</h3>
                         <p>We provide creative and innovative Digital services</p>
                     </div>
-                </div>
-                <div class="blog_card_wrap">
+                </a>
+                <a href="javascript:void(0)" class="blog_card_wrap">
                     <div class="blog-img">
-                        <img src="../../assets/image/blog-two.png" alt="blog">
+                        <img src="../../assets/image/blogs/blog-two.png" alt="blog">
                     </div>
                     <div class="blog-title-text">
                         <h3>January 20, 2021</h3>
                         <p>We provide creative and innovative Digital services</p>
                     </div>
-                </div>
-                <div class="blog_card_wrap">
+                </a>
+                <a href="javascript:void(0)" class="blog_card_wrap">
                     <div class="blog-img">
-                        <img src="../../assets/image/blog-three.png" alt="blog">
+                        <img src="../../assets/image/blogs/blog-three.png" alt="blog">
                     </div>
                     <div class="blog-title-text">
                         <h3>January 20, 2021</h3>
                         <p>We provide creative and innovative Digital services</p>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
     </div>
