Our-team page create and design

--- a/src/app/blog-detail/blog-detail.component.html
+++ b/src/app/blog-detail/blog-detail.component.html
@@ -59,6 +59,7 @@
     </div>
 </section>
 <section class="blogs-section">
+    <div class="container-second">
         <div class="our_work_all_wrap">
             <div class="service-header flex space-between">
                 <div class="service-titel">
@@ -98,4 +99,5 @@
                 </a>
             </div>
         </div>
+    </div>
 </section>
