--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -16,10 +16,10 @@
                 <div class="footer-menu">
                     <ul class="menu-wrap flex">
                         <li class="menu-list">
-                            <a href="#">About us</a>
+                            <a href="/about">About us</a>
                         </li>
                         <li class="menu-list">
-                            <a href="#">Our Team</a>
+                            <a href="/our-team">Our Team</a>
                         </li>
                         <li class="menu-list">
                             <a href="#">Career</a>
