--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -69,7 +69,7 @@
                     </li>
                 </ul>
                 <div class="bnt-wrap">
-                    <a class="cdk-btn-green" href="/">Get a quote</a>
+                    <a class="cdk-btn-green" href="/contact">Get a quote</a>
                 </div>
             </div>
         </div>
