--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -92,9 +92,9 @@
 <section class="service_section">
     <div class="container">
         <div class="service_all_wrap">
+            <h3 class="green-text">our services</h3>
             <div class="service-head flex space-between">
                 <div class="service-titel">
-                    <h3>our services</h3>
                     <h2>We provide the necessary services to you</h2>
                 </div>
                 <div class="service-text">
@@ -197,9 +197,9 @@
 <section class="our_work_section">
     <div class="container">
         <div class="our_work_all_wrap">
+            <h3 class="green-text">our work</h3>
             <div class="service-head flex space-between">
                 <div class="service-titel">
-                    <h3>our work</h3>
                     <h2>What we've been really goingafter...</h2>
                 </div>
                 <div class="service-text">
@@ -343,9 +343,9 @@
 <section class="blogs-section">
     <div class="container">
         <div class="our_work_all_wrap">
+            <h3 class="green-text">Latest News</h3>
             <div class="service-head flex space-between">
                 <div class="service-titel">
-                    <h3>Latest News</h3>
                     <h2>From Industry Insights to Personal Growth</h2>
                 </div>
                 <div class="service-text">
