--- a/src/app/our-work/our-work.component.html
+++ b/src/app/our-work/our-work.component.html
@@ -1,9 +1,9 @@
 <section class="our_work_section">
     <div class="container">
         <div class="our_work_all_wrap">
+            <h3 class="green-text">our work</h3>
             <div class="service-head flex space-between">
                 <div class="service-titel">
-                    <h3>our work</h3>
                     <h2>What we've been really goingafter...</h2>
                 </div>
                 <div class="service-text">
