--- a/src/app/service/service.component.html
+++ b/src/app/service/service.component.html
@@ -14,10 +14,11 @@
     </div>
 </section>
 <section class="service_section">
-        <div class="service_all_wrap">
+    
+        <div class="service_all_wrap container-second">
+            <h3 class="green-text">our services</h3>
             <div class="service-head flex space-between">
                 <div class="service-titel">
-                    <h3>our services</h3>
                     <h2>We provide the necessary services to you</h2>
                 </div>
                 <div class="service-text">
@@ -156,9 +157,9 @@
 </section>
 <section class="our-approach-section">
     <div class="container">
+        <h3 class="green-text">Our Approach</h3>
         <div class="service-head flex space-between">
             <div class="service-titel">
-                <h3>Our Approach</h3>
                 <h2>Making your journey, our journey</h2>
             </div>
             <div class="service-text">
