--- a/src/app/blog-list/blog-list.component.html
+++ b/src/app/blog-list/blog-list.component.html
@@ -1,9 +1,9 @@
 <section class="blogs-section">
     <div class="container">
         <div class="our_work_all_wrap">
+            <h3 class="green-text">Latest News</h3>
             <div class="service-head flex space-between">
                 <div class="service-titel">
-                    <h3>Latest News</h3>
                     <h2>From Industry Insights to Personal Growth</h2>
                 </div>
                 <div class="service-text">
